# Laba5_oop

./: .gitignore  CMakeLists.txt  README.md
include/: custom_memory_resource.h  dynamic_queue.h  dynamic_queue.ipp  queue_exceptions.h
src/: custom_memory_resource.cpp  main.cpp
tests/: test_queue.cpp
